--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   provider: ^3.2.0
-  http: ^0.11.3+16
-  http_middleware: ^1.0.0
-  http_logger: ^1.0.0
+  http: ^0.12.0+4
+  #http_middleware: ^1.0.0
+  #http_logger: ^1.0.0
   json_annotation: ^3.0.0
 
 dev_dependencies:
