--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   http: ^0.12.0+4
   #http_middleware: ^1.0.0
   #http_logger: ^1.0.0
+  rxdart: ^0.24.0
   json_annotation: ^3.0.0
 
 dev_dependencies:
