--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   #http_middleware: ^1.0.0
   #http_logger: ^1.0.0
   rxdart: ^0.24.0
+  url_launcher: ^5.4.2
   json_annotation: ^3.0.0
 
 dev_dependencies:
