--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   #http_logger: ^1.0.0
   rxdart: ^0.24.0
   url_launcher: ^5.4.2
+  intl: ^0.16.1
   json_annotation: ^3.0.0
 
 dev_dependencies:
